UI update (#9)
* Refactored components and stylesheets.
UI is currently under work and therefore broken

* Implemented base UI, editer still needs work.

* More UI/UX, settings is now working.
Only the selection model is missing.

* UI is complete, needs further testing.

* Refactor UI styles and improve account management logic

- Updated border color styles for input fields and buttons to use defined CSS variables.
- Enhanced account editing and retrieval methods to use CompletableFuture for better asynchronous handling.
- Introduced a new PasswordInputControl interface for consistent password field behavior.
- Added hover effects for tab close buttons in the CSS.

* Smaller fixes and bug solving:
- Switched to Identity hashing for the tabs for better consistency
- Fixed tabs opening up after an edit
- Enhanced UI styles for ListView and TabPane components

* Refactor application structure by consolidating IOManager and ObservableResourceFactory as singletons, removing unused interfaces, and updating controllers to utilize new singleton instances.

* Update version to 3.1.0 and add license information across all files

* Add search functionality and refactor navigation in ManagerController, update icon paths, and enhance ListView styles

* Enchanced logging cosnsistency during FXML loading.

* Refactor code to use final modifiers for local variables in multiple classes for improved clarity and performance

* Implemented auto-completion feature and a bunch of shortcuts.

* Update Gradle configuration and dependencies to support Java 25 and JavaFX 25

* Fix command execution in FullJPackageTask.
Additonal fixes, optimizations and refactors.

* Refactor JVM arguments in build.gradle files, update security version handling in UserPreferences and fix searching bug in ManagerController.

* Refactor singleton implementations by using a class-mapped approach.

* Enhance logging and initialization across controllers; refactor loadFxml method to streamline logging and error